--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
+    <title>Cold as Frost - Incredibox</title>
+    <meta name="description" content="Cold as Frost - An Incredibox Fan Game">
+    <!-- 请将下面这行替换为 Google Search Console 提供的具体 meta 标签 -->
     <meta name="google-site-verification" content="QpYplpPwd-7_U-Q0fIj1vUSoNe6GkjtQcBfUa_dIZKc" />
-    <title>Document</title>
 </head>
 <body>
-    
+    <h1>Cold as Frost - Incredibox</h1>
+    <p>Welcome to Cold as Frost, an Incredibox fan game project.</p>
 </body>
 </html>
+
